# Photo-Unloader

./: .gitignore  IMPLEMENTATION_PLAN.md  PRD.md  README.md  index.html  package-lock.json  package.json  progress.md  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/commands/: import.rs  mod.rs  scan.rs  settings.rs
src-tauri/src/importer/: copier.rs  exif.rs  hasher.rs  mod.rs  scanner.rs
src/components/filetable/: FileTable.tsx  FileTableEmpty.tsx  FileTableRow.tsx
src/components/inspector/: ExifGrid.tsx  InspectorPanel.tsx  PhotoPreview.tsx
src/components/layout/: AppShell.tsx  TitleBar.tsx
src/components/logpanel/: LogEntry.tsx  LogPanel.tsx
src/components/progress/: ProgressBar.tsx  ProgressPanel.tsx  StatGrid.tsx
src/components/sidebar/: DestinationSection.tsx  DeviceCard.tsx  SessionHistory.tsx  Sidebar.tsx  SidebarFooter.tsx  SidebarNav.tsx
src/components/toolbar/: FilterChip.tsx  Toolbar.tsx
src/components/ui/: button.tsx  card.tsx  input.tsx  toast.tsx  toaster.tsx
src/hooks/: useAppState.ts  useImportListener.ts  useToast.ts
src/lib/: commands.ts  utils.ts
