[package]
name = "photo-unloader"
version = "0.1.0"
edition = "2021"

[lib]
name = "photo_unloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
kamadak-exif = "0.5"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
